--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -2,6 +2,9 @@ includes:
   - vendor/phpstan/phpstan-strict-rules/rules.neon
 
 parameters:
-  level: max
+  level: 5
   paths:
     - src
+  ignoreErrors:
+    - identifier: trait.unused
+    - identifier: empty.notAllowed
