--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -8,101 +8,101 @@ permissions:
   contents: read
 
 jobs:
-  phpstan:
-    name: PHPStan
-    runs-on: ubuntu-22.04
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: '8.3'
-          tools: composer:v2
-          coverage: none
-
-      - name: Download dependencies
-        run: composer install --no-interaction --no-progress
-
-      - name: Download PHPStan
-        run: composer bin phpstan update --no-interaction --no-progress
-
-      - name: Execute PHPStan
-        run: vendor/bin/phpstan analyze --no-progress
-
-  php-cs-fixer:
-    name: PHP-CS-Fixer
-    runs-on: ubuntu-22.04
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: '8.3'
-          tools: composer:v2
-          coverage: none
-
-      - name: Download dependencies
-        run: composer install --no-interaction --no-progress
-
-      - name: Download PHP CS Fixer
-        run: composer bin php-cs-fixer update --no-interaction --no-progress
-
-      - name: Execute PHP CS Fixer
-        run: vendor/bin/php-cs-fixer fix --diff --dry-run
-
-  unit-tests:
-    name: Unit Tests
-    runs-on: ubuntu-22.04
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: '8.3'
-          tools: composer:v2
-          coverage: none
-
-      - name: Download dependencies
-        run: composer install --no-interaction --no-progress
-
-      - name: Download Pest
-        run: composer bin pest update --no-interaction --no-progress
-
-      - name: Run Tests
-        run: vendor/bin/pest tests/Unit/
-
-  arch-tests:
-    name: Architecture Tests
-    runs-on: ubuntu-22.04
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: '8.3'
-          tools: composer:v2
-          coverage: none
-
-      - name: Download dependencies
-        run: composer install --no-interaction --no-progress
-
-      - name: Download Pest
-        run: composer bin pest update --no-interaction --no-progress
-
-      - name: Run Tests
-        run: vendor/bin/pest tests/Architecture/
+#  phpstan:
+#    name: PHPStan
+#    runs-on: ubuntu-22.04
+#
+#    steps:
+#      - name: Checkout code
+#        uses: actions/checkout@v4
+#
+#      - name: Setup PHP
+#        uses: shivammathur/setup-php@v2
+#        with:
+#          php-version: '8.3'
+#          tools: composer:v2
+#          coverage: none
+#
+#      - name: Download dependencies
+#        run: composer install --no-interaction --no-progress
+#
+#      - name: Download PHPStan
+#        run: composer bin phpstan update --no-interaction --no-progress
+#
+#      - name: Execute PHPStan
+#        run: vendor/bin/phpstan analyze --no-progress
+#
+#  php-cs-fixer:
+#    name: PHP-CS-Fixer
+#    runs-on: ubuntu-22.04
+#
+#    steps:
+#      - name: Checkout code
+#        uses: actions/checkout@v4
+#
+#      - name: Setup PHP
+#        uses: shivammathur/setup-php@v2
+#        with:
+#          php-version: '8.3'
+#          tools: composer:v2
+#          coverage: none
+#
+#      - name: Download dependencies
+#        run: composer install --no-interaction --no-progress
+#
+#      - name: Download PHP CS Fixer
+#        run: composer bin php-cs-fixer update --no-interaction --no-progress
+#
+#      - name: Execute PHP CS Fixer
+#        run: vendor/bin/php-cs-fixer fix --diff --dry-run
+#
+#  unit-tests:
+#    name: Unit Tests
+#    runs-on: ubuntu-22.04
+#
+#    steps:
+#      - name: Checkout code
+#        uses: actions/checkout@v4
+#
+#      - name: Setup PHP
+#        uses: shivammathur/setup-php@v2
+#        with:
+#          php-version: '8.3'
+#          tools: composer:v2
+#          coverage: none
+#
+#      - name: Download dependencies
+#        run: composer install --no-interaction --no-progress
+#
+#      - name: Download Pest
+#        run: composer bin pest update --no-interaction --no-progress
+#
+#      - name: Run Tests
+#        run: vendor/bin/pest tests/Unit/
+#
+#  arch-tests:
+#    name: Architecture Tests
+#    runs-on: ubuntu-22.04
+#
+#    steps:
+#      - name: Checkout code
+#        uses: actions/checkout@v4
+#
+#      - name: Setup PHP
+#        uses: shivammathur/setup-php@v2
+#        with:
+#          php-version: '8.3'
+#          tools: composer:v2
+#          coverage: none
+#
+#      - name: Download dependencies
+#        run: composer install --no-interaction --no-progress
+#
+#      - name: Download Pest
+#        run: composer bin pest update --no-interaction --no-progress
+#
+#      - name: Run Tests
+#        run: vendor/bin/pest tests/Architecture/
 
   functional-tests:
     name: Functional Tests
@@ -122,10 +122,11 @@ jobs:
       WIREMOCK_HOST: http://localhost:8080
 
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
       - name: List dir
         run: ls -la
-#      - name: Checkout code
-#        uses: actions/checkout@v4
 
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
