--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -104,42 +104,51 @@ jobs:
 #      - name: Run Tests
 #        run: vendor/bin/pest tests/Architecture/
 
-  functional-tests:
-    name: Functional Tests
-    runs-on: ubuntu-22.04
-
-    services:
-      wiremock:
-        image: wiremock/wiremock
-        env:
-          WIREMOCK_OPTIONS: "--verbose --global-response-templating --disable-gzip"
-        volumes:
-          - ./tests/__support/wiremock:/home/wiremock
-        ports:
-          - 8080:8080
+  tests:
+    runs-on: ubuntu-latest
 
     env:
       WIREMOCK_HOST: http://localhost:8080
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-      - name: List dir
-        run: ls -la
-
-      - name: Setup PHP
+      - name: Set up PHP
         uses: shivammathur/setup-php@v2
         with:
           php-version: '8.3'
-          tools: composer:v2
-          coverage: none
+          coverage: xdebug
 
-      - name: Download dependencies
-        run: composer install --no-interaction --no-progress
+      - name: Install Composer dependencies
+        run: composer install --no-progress --prefer-dist
 
-      - name: Download Pest
-        run: composer bin pest update --no-interaction --no-progress
+      - name: Start WireMock container
+        run: |
+          docker run -d \
+            --name wiremock \
+            -p 8080:8080 \
+            wiremock/wiremock:latest
+            -v "$PWD/tests/__support/wiremock":/home/wiremock \
 
-      - name: Run Tests
-        run: vendor/bin/pest tests/Feature/
+      - name: Wait for WireMock
+        run: |
+          for i in {1..10}; do
+            if curl -s http://localhost:8080/__admin >/dev/null 2>&1; then
+              echo "WireMock is up!"
+              break
+            fi
+            echo "Waiting for WireMock..."
+            sleep 2
+          done
+
+      - name: Run Pest tests
+        run: |
+          vendor/bin/pest --coverage
+
+#      # 7) (Optional) Upload coverage artifacts
+#      - name: Upload coverage artifacts
+#        uses: actions/upload-artifact@v2
+#        with:
+#          name: coverage-report
+#          path: coverage/
