--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -131,23 +131,23 @@ jobs:
 #            wiremock/wiremock:latest \
 #            -v "$PWD/tests/__support/wiremock":/home/wiremock
 #
-      - name: Wait for WireMock
-        run: |
-          for i in {1..10}; do
-            if curl -s http://localhost:8080/__admin >/dev/null 2>&1; then
-              echo "WireMock is up!"
-              break
-            fi
-            echo "Waiting for WireMock..."
-            sleep 2
-          done
-
       - name: Run WireMock
         run: docker compose up -d wiremock
+
+      - name: Wait for Wiremock
+        run: |
+          curl --retry 5 --retry-delay 3 --retry-connrefused $WIREMOCK_HOST/__admin/health
 
       - name: Run Pest tests
         run: |
           vendor/bin/pest --coverage
+
+      - name: Show Wiremock logs
+        run: docker compose logs wiremock
+
+      - name: Docker Compose Down
+        if: always()
+        run: docker compose down
 
 #      # 7) (Optional) Upload coverage artifacts
 #      - name: Upload coverage artifacts
