--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -132,25 +132,26 @@ jobs:
 #            -v "$PWD/tests/__support/wiremock":/home/wiremock
 #
       - name: Run WireMock
-        run: docker compose up -d wiremock
+        run: docker compose up wiremock
 
-      - name: Show Wiremock logs
-        run: |
-          for i in {1..5}; do
-            echo "Showing WireMock Logs..."
-            docker compose logs wiremock
-            sleep 2
-          done
+#      - name: Show Wiremock logs
+#        run: |
+#          for i in {1..5}; do
+#            echo "Showing WireMock Logs..."
+#            docker compose logs wiremock
+#            sleep 2
+#          done
 
       - name: Wait for Wiremock
         run: |
-          curl --retry 5 --retry-delay 3 --retry-connrefused $WIREMOCK_HOST/__admin/health
+          curl --retry 5 --retry-delay 3 --retry-all-errors $WIREMOCK_HOST/__admin/health
 
       - name: Run Pest tests
         run: |
           vendor/bin/pest --coverage
 
       - name: Show Wiremock logs
+        if: always()
         run: docker compose logs wiremock
 
       - name: Docker Compose Down
