--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -8,101 +8,53 @@ permissions:
   contents: read
 
 jobs:
-#  phpstan:
-#    name: PHPStan
-#    runs-on: ubuntu-22.04
-#
-#    steps:
-#      - name: Checkout code
-#        uses: actions/checkout@v4
-#
-#      - name: Setup PHP
-#        uses: shivammathur/setup-php@v2
-#        with:
-#          php-version: '8.3'
-#          tools: composer:v2
-#          coverage: none
-#
-#      - name: Download dependencies
-#        run: composer install --no-interaction --no-progress
-#
-#      - name: Download PHPStan
-#        run: composer bin phpstan update --no-interaction --no-progress
-#
-#      - name: Execute PHPStan
-#        run: vendor/bin/phpstan analyze --no-progress
-#
-#  php-cs-fixer:
-#    name: PHP-CS-Fixer
-#    runs-on: ubuntu-22.04
-#
-#    steps:
-#      - name: Checkout code
-#        uses: actions/checkout@v4
-#
-#      - name: Setup PHP
-#        uses: shivammathur/setup-php@v2
-#        with:
-#          php-version: '8.3'
-#          tools: composer:v2
-#          coverage: none
-#
-#      - name: Download dependencies
-#        run: composer install --no-interaction --no-progress
-#
-#      - name: Download PHP CS Fixer
-#        run: composer bin php-cs-fixer update --no-interaction --no-progress
-#
-#      - name: Execute PHP CS Fixer
-#        run: vendor/bin/php-cs-fixer fix --diff --dry-run
-#
-#  unit-tests:
-#    name: Unit Tests
-#    runs-on: ubuntu-22.04
-#
-#    steps:
-#      - name: Checkout code
-#        uses: actions/checkout@v4
-#
-#      - name: Setup PHP
-#        uses: shivammathur/setup-php@v2
-#        with:
-#          php-version: '8.3'
-#          tools: composer:v2
-#          coverage: none
-#
-#      - name: Download dependencies
-#        run: composer install --no-interaction --no-progress
-#
-#      - name: Download Pest
-#        run: composer bin pest update --no-interaction --no-progress
-#
-#      - name: Run Tests
-#        run: vendor/bin/pest tests/Unit/
-#
-#  arch-tests:
-#    name: Architecture Tests
-#    runs-on: ubuntu-22.04
-#
-#    steps:
-#      - name: Checkout code
-#        uses: actions/checkout@v4
-#
-#      - name: Setup PHP
-#        uses: shivammathur/setup-php@v2
-#        with:
-#          php-version: '8.3'
-#          tools: composer:v2
-#          coverage: none
-#
-#      - name: Download dependencies
-#        run: composer install --no-interaction --no-progress
-#
-#      - name: Download Pest
-#        run: composer bin pest update --no-interaction --no-progress
-#
-#      - name: Run Tests
-#        run: vendor/bin/pest tests/Architecture/
+  phpstan:
+    name: PHPStan
+    runs-on: ubuntu-22.04
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.3'
+          tools: composer:v2
+          coverage: none
+
+      - name: Download dependencies
+        run: composer install --no-interaction --no-progress
+
+      - name: Download PHPStan
+        run: composer bin phpstan update --no-interaction --no-progress
+
+      - name: Execute PHPStan
+        run: vendor/bin/phpstan analyze --no-progress
+
+  php-cs-fixer:
+    name: PHP-CS-Fixer
+    runs-on: ubuntu-22.04
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.3'
+          tools: composer:v2
+          coverage: none
+
+      - name: Download dependencies
+        run: composer install --no-interaction --no-progress
+
+      - name: Download PHP CS Fixer
+        run: composer bin php-cs-fixer update --no-interaction --no-progress
+
+      - name: Execute PHP CS Fixer
+        run: vendor/bin/php-cs-fixer fix --diff --dry-run
 
   tests:
     runs-on: ubuntu-latest
@@ -123,32 +75,15 @@ jobs:
       - name: Install Composer dependencies
         run: composer install --no-progress --prefer-dist
 
-#      - name: Start WireMock container
-#        run: |
-#          docker run -d \
-#            --name wiremock \
-#            -p 8080:8080 \
-#            wiremock/wiremock:latest \
-#            -v "$PWD/tests/__support/wiremock":/home/wiremock
-#
       - name: Run WireMock
         run: docker compose up -d wiremock
-
-#      - name: Show Wiremock logs
-#        run: |
-#          for i in {1..5}; do
-#            echo "Showing WireMock Logs..."
-#            docker compose logs wiremock
-#            sleep 2
-#          done
 
       - name: Wait for Wiremock
         run: |
           curl --retry 5 --retry-delay 3 --retry-all-errors $WIREMOCK_HOST/__admin/health
 
       - name: Run Pest tests
-        run: |
-          vendor/bin/pest --coverage
+        run: XDEBUG_MODE=coverage vendor/bin/pest --coverage --min=90 --coverage-cobertura coverage/coverage.cobertura.xml
 
       - name: Show Wiremock logs
         if: always()
@@ -158,9 +93,15 @@ jobs:
         if: always()
         run: docker compose down
 
-#      # 7) (Optional) Upload coverage artifacts
-#      - name: Upload coverage artifacts
-#        uses: actions/upload-artifact@v2
-#        with:
-#          name: coverage-report
-#          path: coverage/
+      - name: Code Coverage Report
+        uses: irongut/CodeCoverageSummary@v1.3.0
+        with:
+          filename: coverage/coverage.cobertura.xml
+          badge: true
+          fail_below_min: true
+          format: markdown
+          hide_branch_rate: false
+          hide_complexity: true
+          indicators: true
+          output: both
+          thresholds: '60 90'
