--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -93,15 +93,21 @@ jobs:
         if: always()
         run: docker compose down
 
-      - name: Code Coverage Report
-        uses: irongut/CodeCoverageSummary@v1.3.0
+#      - name: Code Coverage Report
+#        uses: irongut/CodeCoverageSummary@v1.3.0
+#        with:
+#          filename: coverage/coverage.cobertura.xml
+#          badge: true
+#          fail_below_min: true
+#          format: markdown
+#          hide_branch_rate: false
+#          hide_complexity: true
+#          indicators: true
+#          output: both
+#          thresholds: '60 90'
+
+      - name: Upload coverage artifacts
+        uses: actions/upload-artifact@v2
         with:
-          filename: coverage/coverage.cobertura.xml
-          badge: true
-          fail_below_min: true
-          format: markdown
-          hide_branch_rate: false
-          hide_complexity: true
-          indicators: true
-          output: both
-          thresholds: '60 90'
+          name: coverage-report
+          path: coverage/
