--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -93,21 +93,31 @@ jobs:
         if: always()
         run: docker compose down
 
-#      - name: Code Coverage Report
-#        uses: irongut/CodeCoverageSummary@v1.3.0
-#        with:
-#          filename: coverage/coverage.cobertura.xml
-#          badge: true
-#          fail_below_min: true
-#          format: markdown
-#          hide_branch_rate: false
-#          hide_complexity: true
-#          indicators: true
-#          output: both
-#          thresholds: '60 90'
+      - name: Code Coverage Report
+        uses: irongut/CodeCoverageSummary@v1.3.0
+        with:
+          filename: coverage/coverage.cobertura.xml
+          badge: true
+          fail_below_min: true
+          format: markdown
+          hide_branch_rate: false
+          hide_complexity: true
+          indicators: true
+          output: both
+          thresholds: '60 90'
 
       - name: Upload coverage artifacts
         uses: actions/upload-artifact@v4
         with:
           name: coverage-report
           path: coverage/
+
+      - name: Add Coverage PR Comment
+        uses: marocchino/sticky-pull-request-comment@v2
+        if: github.event_name == 'pull_request'
+        with:
+          recreate: true
+          path: code-coverage-results.md
+
+      - name: Write to Job Summary
+        run: cat code-coverage-results.md >> $GITHUB_STEP_SUMMARY
