feat(ci): perform code quality checks (#1)
* Added static analysis action with phpstan

* Added composer bin plugin

* Some quality assessment fixes - needed to lower phpstan level as it seems impossible right now to properly type generics with arrays

* Added PHP-CS-Fixer job to code quality job

* Added Unit Test action

* Added other test actions

* Setting wiremock host for test via env

* Mounting volumes in wiremock

* Coverage report

* CS Fix

* Coverage

--- a/composer.json
+++ b/composer.json
@@ -34,14 +34,22 @@
         "friendsofphp/php-cs-fixer": "^3.70",
         "symfony/validator": "^7.2",
         "mockery/mockery": "^1.6",
-        "wiremock-php/wiremock-php": "^2.35"
+        "wiremock-php/wiremock-php": "^2.35",
+        "bamarni/composer-bin-plugin": "^1.8"
     },
     "suggest": {
         "symfony/validator": "To allow request and response DTO validation"
     },
     "config": {
         "allow-plugins": {
+            "bamarni/composer-bin-plugin": true,
             "pestphp/pest-plugin": true
+        }
+    },
+    "extra": {
+        "bamarni-bin": {
+            "bin-links": true,
+            "forward-command": false
         }
     },
     "scripts": {
@@ -49,6 +57,6 @@
         "fix": "PHP_CS_FIXER_IGNORE_ENV=1 php-cs-fixer fix --config=.php-cs-fixer.dist.php --verbose",
         "test": "pest",
         "test-full": "XDEBUG_MODE=coverage pest --coverage --min=90",
-        "test-arch": "pest "
+        "test-arch": "pest"
     }
 }
