Changed implementation pattern to work with guzzle middlewares instead of dedicate decorators; a subclass of PSR Request is now carrying the enhanced response around

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,3 +26,10 @@ services:
       WIREMOCK_OPTIONS: "--verbose --global-response-templating --disable-gzip"
     volumes:
       - ./tests/__support/wiremock:/home/wiremock:ro
+
+  json-server:
+    image: clue/json-server
+    ports:
+      - "8081:80"
+    volumes:
+      - ./tests/__support/json-server/db.json:/data/db.json
