--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -145,7 +145,7 @@ jobs:
           coverage: xdebug
 
       - name: Install Composer dependencies
-        run: composer install --no-progress --prefer-lowest
+        run: composer update --no-progress --prefer-lowest
 
       - name: Run WireMock
         run: docker compose up -d wiremock
