--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -155,7 +155,7 @@ jobs:
           curl --retry 5 --retry-delay 3 --retry-all-errors $WIREMOCK_HOST/__admin/health
 
       - name: Run Pest tests
-        run: XDEBUG_MODE=coverage vendor/bin/pest --coverage --min=90 --coverage-cobertura coverage/coverage.cobertura.xml
+        run: vendor/bin/pest
 
       - name: Show Wiremock logs
         if: always()
@@ -164,24 +164,3 @@ jobs:
       - name: Docker Compose Down
         if: always()
         run: docker compose down
-
-      - name: Code Coverage Report
-        uses: irongut/CodeCoverageSummary@v1.3.0
-        with:
-          filename: coverage/coverage.cobertura.xml
-          badge: true
-          fail_below_min: true
-          format: markdown
-          hide_branch_rate: false
-          hide_complexity: true
-          indicators: true
-          output: both
-          thresholds: '90 95'
-
-      - name: Write to Job Summary
-        run: cat code-coverage-results.md >> $GITHUB_STEP_SUMMARY
-
-      - name: Upload coverage reports to Codecov
-        uses: codecov/codecov-action@v5
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
