--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,9 @@
         "symfony/serializer": "^7.2",
         "symfony/property-info": "^7.2",
         "symfony/property-access": "^7.2",
-        "psr/log": "^3.0"
+        "psr/log": "^3.0",
+        "phpdocumentor/reflection-docblock": "^5.6",
+        "phpstan/phpdoc-parser": "^2.1"
     },
     "require-dev": {
         "pestphp/pest": "^3.7",
