--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         "symfony/property-access": "^7.2",
         "psr/log": "^3.0",
         "phpdocumentor/reflection-docblock": "^5.6",
-        "phpstan/phpdoc-parser": "^2.1"
+        "phpstan/phpdoc-parser": "^1.0|^2.0"
     },
     "require-dev": {
         "pestphp/pest": "^3.7",
